# sandbox--ner

./: .gitignore  README.md  pyproject.toml
notebooks/: data-exploration.ipynb  main.ipynb
